<resources>
    <string name="app_name">CalculatorAndTimer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seconds">%d seconds elapsed</string>
    <string name="start_timer">START</string>
    <string name="pause_timer">PAUSE</string>
    <string name="resume_timer">RESUME</string>
    <string name="timer">Timer</string>
    <string name="reset_timer">RESET</string>
    <string name="calculator">Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="devide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiple">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
</resources>