<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.calculator.CalculatorFragment">
    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="none"
        android:gravity="end"
        android:textSize="32sp"
        android:focusable="false"
        android:layout_marginBottom="32dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:rowCount="4"
        android:layout_marginBottom="60dp"
        android:columnCount="4">

        <Button android:text="@string/_7" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_seven"/>
        <Button android:text="@string/_8" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_eight"/>
        <Button android:text="@string/_9" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_nine"/>
        <Button android:text="@string/devide" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/devide"/>

        <Button android:text="@string/_4" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_four"/>
        <Button android:text="@string/_5" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_five"/>
        <Button android:text="@string/_6" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_six"/>
        <Button android:text="@string/multiple" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/multiple"/>

        <Button android:text="@string/_1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_one"/>
        <Button android:text="@string/_2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_two"/>
        <Button android:text="@string/_3" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_three"/>
        <Button android:text="@string/minus" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/minus"/>

        <Button android:text="@string/c" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/clear"/>
        <Button android:text="@string/_0" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/number_zero"/>
        <Button android:text="@string/equal" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/equal"/>
        <Button android:text="@string/plus" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1" android:id="@+id/plus"/>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
